fix github banner overlapping the left nav

--- a/css/main.css
+++ b/css/main.css
@@ -5,8 +5,9 @@
 {
   overflow: hidden;
   top: 0;
+  right: 0;
   position: absolute;
-  width: 100%;
+  width: 150px;
   height: 150px;
 }
 #github
